<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        tools:layout_editor_absoluteX="140dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/tablet_graph_png" />

        <TextView
            android:layout_width="172dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/erasmd"
            android:gravity="left|center_vertical"
            android:text="@string/slogan"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/erasmd"
            android:gravity="center"
            android:padding="30dp"
            android:text="@string/welcome_string"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="31sp" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="20dp"
            android:hint="@string/email"
            android:ems="10"
            android:textSize="25sp"
            android:textColor="@color/orange"
            android:fontFamily="@font/erasmd"
            android:background="@drawable/edit_text_rounded"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_rounded"
            android:paddingLeft="20dp"
            android:hint="@string/password"
            android:textSize="25sp"
            android:textColor="@color/orange"
            android:fontFamily="@font/erasmd"
            android:ems="10"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:fontFamily="@font/erasmd"
                android:onClick="forgotPassword"
                android:text="@string/forgot_password"
                android:textColor="@color/orange" />

            <Button
                android:onClick="login"
                android:layout_width="112dp"
                android:layout_height="64dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:fontFamily="@font/erasmd"
                android:text="@string/login"
                android:backgroundTint="@color/red"
                android:textSize="21sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orange"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/erasmd"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:onClick="signUp"
            android:text="@string/signup"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:alpha="0.42"
            android:scaleX="2"
            android:scaleY="2"
            android:src="@drawable/analytics_graph"
            android:translationX="15dp"
            android:translationY="80dp" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>