<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:id="@+id/rootAddFragment"
    tools:context=".TabFragment">

    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.15"
        android:src="@drawable/analytics_graph"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutAddFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:id="@+id/mainIcoAddFragment"
                android:src="@drawable/tablet_graph_png" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/erasmd"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:gravity="center_vertical"
                android:text="@string/add_tab" />
        </LinearLayout>

        <EditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/erasmd"
            android:gravity="center"
            android:padding="30dp"
            android:hint="@string/name"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="58dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_rounded"
                android:fontFamily="@font/erasmd"
                android:gravity="center"
                android:text="@string/old_price"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="58dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_rounded"
                android:fontFamily="@font/erasmd"
                android:gravity="center"
                android:text="@string/count"
                android:textColor="@color/black"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="120dp"
                android:layout_height="58dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:id="@+id/oldPriceET"
                android:layout_weight="1"
                android:background="@drawable/edit_text_rounded"
                android:fontFamily="@font/erasmd"
                android:gravity="center"
                android:ems="20"
                android:hint="@string/test_price"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:layout_width="120dp"
                android:layout_height="58dp"
                android:id="@+id/countET"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_rounded"
                android:fontFamily="@font/erasmd"
                android:gravity="center"
                android:ems="20"
                android:hint="@string/test_price"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:fontFamily="@font/erasmd"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="center_vertical"
                android:text="@string/web_link" />

            <EditText
                android:id="@+id/linkET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:ems="20"
                android:textSize="15sp"
                android:textColor="@color/orange"
                android:fontFamily="@font/erasmd"
                android:background="@drawable/edit_text_rounded"
                android:backgroundTint="@color/orange"
                android:hint="@string/link_hint" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/bottomSectionAddFragment"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/addButtonAddFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#00FFFFFF"
                android:scaleType="fitCenter"
                android:src="@drawable/big_add_with_duo_colors_button_png"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>